--- a/views/post.html
+++ b/views/post.html
@@ -14,19 +14,7 @@
     </div>
   </div>
   <div class="comments container">
-    <!-- 
-      以前表单是如何提交的？
-      表单中需要提交的表单控件元素必须具有 name 属性
-      表单提交分为：
-        1. 默认的提交行为
-        2. 表单异步提交
-
-        action 就是表单提交的地址，说白了就是请求的 url 地址
-        method 请求方法
-            get
-            post
-     -->
-    <form action="/pinglun" method="get">
+    <form action="/publishedComment" method="get">
       <div class="form-group">
         <label for="input_name">你的大名</label>
         <input type="text" class="form-control" required minlength="2" maxlength="10" id="input_name" name="name" placeholder="请写入你的姓名">
